# kaomoij

./: CMakeLists.txt  README.md
src/kaomoji/: config.c  config.h  keybind.c  keybind.h  main.c  message.c  message.h  window.c  window.h
src/kaomoji/io/: config.c  config.h  entry.c  entry.h  file.c  file.h
src/kaomoji/util/: clipboard.c  clipboard.h  keybind.c  keybind.h  log.c  log.h  type.c  type.h
src/kaomoji/window/: button.c  button.h  message.c  message.h  scroll.c  scroll.h  toggle.c  toggle.h  window.c  window.h
src/resources/config/: config.wtxt  entries.wtxt
